--- a/index.html
+++ b/index.html
@@ -6,65 +6,76 @@
 <html class="no-js">
   <!--<![endif]-->
   <html lang="en">
-
     <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible"
-            content="IE=edge">
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <title>My Product Landing Page</title>
-      <meta name="description"
-            content="">
-      <meta name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="description" content="" />
+      <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      />
 
       <!-- Bootstrap CSS -->
-      <link rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous">
+      <link
+        rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous"
+      />
 
       <!-- Other CSS -->
-      <link rel="stylesheet"
-            href="./resources/css/style.css">
-      <link rel="stylesheet"
-            href="https://fonts.googleapis.com/icon?family=Material+Icons">
-      <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="./resources/css/style.css" />
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      />
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      />
 
-      <script src="https://kit.fontawesome.com/48ae993cb3.js"
-              crossorigin="anonymous"></script>
+      <script
+        src="https://kit.fontawesome.com/48ae993cb3.js"
+        crossorigin="anonymous"
+      ></script>
 
-      <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:wght@400;700&display=swap"
-            rel="stylesheet">
+      <link
+        href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:wght@400;700&display=swap"
+        rel="stylesheet"
+      />
     </head>
 
     <body>
       <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <p class="browsehappy">
+          You are using an <strong>outdated</strong> browser. Please
+          <a href="#">upgrade your browser</a> to improve your experience.
+        </p>
+      <![endif]-->
       <!-- partial:index.partial.html -->
 
       <div class="page-wrapper">
         <header id="header">
-          <div class="logo"><img id="header-img"
-                 src="./resources/pics/original_trombones.png"
-                 alt="original trombone logo"></div>
-          <nav id="nav-bar"
-               class="navbar navbar-expand-sm">
+          <div class="logo">
+            <img
+              id="header-img"
+              src="./resources/pics/original_trombones.png"
+              alt="original trombone logo"
+            />
+          </div>
 
+          <nav id="nav-bar" class="navbar navbar-expand-sm">
             <!-- Links -->
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link"
-                   href="#features">Features</a>
+                <a class="nav-link" href="#features">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"
-                   href="#how-it-works">How It Works</a>
+                <a class="nav-link" href="#how-it-works">How It Works</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"
-                   href="#pricing">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
             </ul>
           </nav>
@@ -72,17 +83,20 @@
         <div class="jumbotron">
           <div class="container text-center">
             <h2>Handcrafted, home-made masterpieces</h2>
-            <form id="form"
-                  action="https://www.freecodecamp.com/email-submit">
-              <input name="email"
-                     id="email"
-                     type="email"
-                     placeholder="Enter your email address"
-                     required />
-              <input id="submit"
-                     type="submit"
-                     value="Get Started"
-                     class="btn btn-warning" />
+            <form id="form" action="https://www.freecodecamp.com/email-submit">
+              <input
+                name="email"
+                id="email"
+                type="email"
+                placeholder="Enter your email address"
+                required
+              />
+              <input
+                id="submit"
+                type="submit"
+                value="Get Started"
+                class="btn btn-warning"
+              />
             </form>
           </div>
         </div>
@@ -94,9 +108,12 @@
               </div>
               <div class="description">
                 <h2>Premium Materials</h2>
-                <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of
-                  your purchase.Our trombones use the shiniest brass which is sourced locally. This will increase the
-                  longevity of your purchase.</p>
+                <p>
+                  Our trombones use the shiniest brass which is sourced locally.
+                  This will increase the longevity of your purchase.Our
+                  trombones use the shiniest brass which is sourced locally.
+                  This will increase the longevity of your purchase.
+                </p>
               </div>
             </div>
             <div class="grid">
@@ -105,8 +122,11 @@
               </div>
               <div class="description">
                 <h2>Fast Shipping</h2>
-                <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free
-                  returns if you are not satisfied.</p>
+                <p>
+                  We make sure you recieve your trombone as soon as we have
+                  finished making it. We also provide free returns if you are
+                  not satisfied.
+                </p>
               </div>
             </div>
             <div class="grid">
@@ -115,74 +135,82 @@
               </div>
               <div class="description">
                 <h2>Quality Assurance</h2>
-                <p>For every purchase you make, we will ensure there are no damages or faults and we will check and
-                  test the pitch of your instrument.</p>
+                <p>
+                  For every purchase you make, we will ensure there are no
+                  damages or faults and we will check and test the pitch of your
+                  instrument.
+                </p>
               </div>
             </div>
           </section>
           <section id="how-it-works">
-            <iframe id="video"
-                    width="560"
-                    height="315"
-                    src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
-                    frameborder="0"
-                    allowfullscreen></iframe>
+            <iframe
+              id="video"
+              width="560"
+              height="315"
+              src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
           </section>
           <div class="container"></div>
           <section id="pricing">
-            <div class="card-deck justify-content-center">
-              <div class="card border-1 border-dark">
-                <div class="card-header">
-                  <h4 class="card-title">Tenor trombone</h4>
-                </div>
-                <div class="card-body">
-                  <h2>$600</h2>
-                  <ul class="card-text">
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum dolor.</li>
-                    <li>Lorem ipsum.</li>
-                  </ul>
-                </div>
-                <div class="card-footer text-center">
-                  <a href="#"
-                     class="btn btn-warning center">Select</a>
-                </div>
-              </div>
-              <div class="card border-1 border-dark">
-                <div class="card-header">
-                  <h4 class="card-title">Base Trombone</h4>
-                </div>
-                <div class="card-body">
-                  <h2>$900</h2>
-                  <ul class="card-text">
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum dolor.</li>
-                    <li>Lorem ipsum.</li>
-                  </ul>
-                </div>
-                <div class="card-footer text-center">
-                  <a href="#"
-                     class="btn btn-warning center">Select</a>
+            <div class="row cards">
+              <div class="col-md-4 d-flex justify-content-center">
+                <div class="card border-1 border-dark">
+                  <div class="card-header">
+                    <h4 class="card-title">Tenor trombone</h4>
+                  </div>
+                  <div class="card-body">
+                    <h2>$600</h2>
+                    <ul class="card-text">
+                      <li>Lorem ipsum.</li>
+                      <li>Lorem ipsum.</li>
+                      <li>Lorem ipsum dolor.</li>
+                      <li>Lorem ipsum.</li>
+                    </ul>
+                  </div>
+                  <div class="card-footer text-center">
+                    <a href="#" class="btn btn-warning center">Select</a>
+                  </div>
                 </div>
               </div>
-              <div class="card border-1 border-dark">
-                <div class="card-header">
-                  <h4 class="card-title">Valve Trombone</h4>
+              <div class="col-md-4 d-flex justify-content-center">
+                <div class="card border-1 border-dark">
+                  <div class="card-header">
+                    <h4 class="card-title">Base Trombone</h4>
+                  </div>
+                  <div class="card-body">
+                    <h2>$900</h2>
+                    <ul class="card-text">
+                      <li>Lorem ipsum.</li>
+                      <li>Lorem ipsum.</li>
+                      <li>Lorem ipsum dolor.</li>
+                      <li>Lorem ipsum.</li>
+                    </ul>
+                  </div>
+                  <div class="card-footer text-center">
+                    <a href="#" class="btn btn-warning center">Select</a>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <h2>$1200</h2>
-                  <ul class="card-text">
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum.</li>
-                    <li>Lorem ipsum dolor.</li>
-                    <li>Lorem ipsum.</li>
-                  </ul>
-                </div>
-                <div class="card-footer text-center">
-                  <a href="#"
-                     class="btn btn-warning center">Select</a>
+              </div>
+              <div class="col-md-4 d-flex justify-content-center">
+                <div class="card border-1 border-dark">
+                  <div class="card-header">
+                    <h4 class="card-title">Valve Trombone</h4>
+                  </div>
+                  <div class="card-body">
+                    <h2>$1200</h2>
+                    <ul class="card-text">
+                      <li>Lorem ipsum.</li>
+                      <li>Lorem ipsum.</li>
+                      <li>Lorem ipsum dolor.</li>
+                      <li>Lorem ipsum.</li>
+                    </ul>
+                  </div>
+                  <div class="card-footer text-center">
+                    <a href="#" class="btn btn-warning center">Select</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -207,16 +235,21 @@
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="./resources/scripts/script.js"></script>
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-              integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-              crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-              integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-              crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-              integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-              crossorigin="anonymous"></script>
-
+      <script
+        src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"
+      ></script>
     </body>
-
   </html>
+</html>
